[package]
name = "calcite"
version = "0.1.0"
authors = ["Srinivasa <m.srinivasa1234@gmail.com>"]
edition = "2018"

[dependencies]
deno_core = ">=0.49.0"
calcite_proc_macros = { path = "calcite_proc_macros" }
futures = "^0"
rmp-serde = "^0"

[dev-dependencies]
serde_derive = "^1"
serde = "^1"

[[example]]
name = "hello_world"
crate-type = ["cdylib"]
