[package]
name = "calcite"
version = "0.2.6"
authors = ["Srinivasa <m.srinivasa1234@gmail.com>"]
edition = "2018"
description = "A library to create deno plugins"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Srinivasa314/calcite"

[dependencies]
deno_core = "0.77.0"
calcite_proc_macros = { path = "calcite_proc_macros", version = "0.1.4" }
futures = "0.3.12"
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.61"


[[example]]
name = "sync"
crate-type = ["cdylib"]

[[example]]
name = "async"
crate-type = ["cdylib"]
